[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/tanks/Spritesheet/onlyObjects_default.png" type="Texture" id=1]
[ext_resource path="res://actors/Weapon.gd" type="Script" id=2]
[ext_resource path="res://weapons/Bullet.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/PNG/weapon_silencer.png" type="Texture" id=4]

[sub_resource type="Animation" id=2]
resource_name = "MuzzleFlash"
length = 0.05
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.000859375, 0.05 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.5, 1.2 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "reload"
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -90.0, 0.0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_stop_reload"
} ]
}

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.290323, 0.767742, 1 )
colors = PoolColorArray( 1, 0.8, 0, 1, 0.929688, 0.885599, 0.711792, 1, 0.722656, 0.654156, 0.398026, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0.157135 ), 0.0, 0.0, 0, 0, Vector2( 0.735955, 0.993499 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 1.0
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 10.0
linear_accel_random = 1.0
radial_accel = 5.0
radial_accel_random = 1.0
tangential_accel = 5.0
tangential_accel_random = 1.0
scale = 10.0
scale_random = 0.2
scale_curve = SubResource( 5 )
color = Color( 1, 0.8, 0, 1 )
color_ramp = SubResource( 7 )

[node name="Weapon" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
Bullet = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="EndOfGun" type="Position2D" parent="."]
position = Vector2( 16, 0 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="MuzzleFlash" type="Sprite" parent="."]
visible = false
position = Vector2( 28, 0 )
rotation = -1.5708
scale = Vector2( 0.5, 1.2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 324, 334, 20, 25 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MuzzleFlash")
anims/MuzzleFlash = SubResource( 2 )
anims/reload = SubResource( 3 )

[node name="MuzzleFlashParticles" type="Particles2D" parent="."]
position = Vector2( 16, 0 )
rotation = -1.5708
emitting = false
amount = 10
lifetime = 0.7
one_shot = true
speed_scale = 6.0
process_material = SubResource( 9 )
